manifests/simple-demo-api/simple-demo-api.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simple-demo-api-dep
  namespace: simple-demo-development
spec:
  selector:
    matchLabels:
      app: simple-demo-api
  replicas: 2
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: simple-demo-api
    spec:
      containers:
        - name: simple-demo-api
          image: rg.xyz936.xyz/simpledemoapi:3a3e1a0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 30
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 80
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: xyz936-registry-cred
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-demo-api-ing
  namespace: simple-demo-development
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: simple-demo-api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-demo-api-svc
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: simple-demo-api-svc
  namespace: simple-demo-development
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: simple-demo-api
